# predict-pizza-prices

./: Dockerfile  README.md  app.py  pizzas.csv  pyproject.toml  testes.ipynb
