[tool.poetry]
name = "pizza-prices"
version = "0.1.0"
description = ""
authors = ["Yuri Araujo <yu.dev@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
streamlit = "^1.41.1"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
